[package]
name = "hsm-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
yubihsm = { version = "0.42.1", features = ["usb"] }
p256 = { version = "0.13", features = ["ecdsa"] }
signature = "2.2"
sha2 = "0.10"
hex = "0.4"
unicode-segmentation = "1.12"

# gpuirs components libs
gpui-component = "0.5.0-preview2"
gpui-component-assets = "0.5.0-preview2"
anyhow = "1.0"